# liberty-db

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  _backup_build.rs  build.rs  out.lib  out.rs  output.lib  publish.sh  rustfmt.toml
.github/: dependabot.yml
benches/: Cargo.toml  benchmark.rs  build.rs
benches/benches/: benchmark.rs
benches/projs/: projs.cpp
benches/projs/liberty2json/: Cargo.toml
benches/projs/liberty2json/src/: dump.rs  lib.rs
benches/projs/liberty2json/src/parser/: base.rs  group_parser.rs
benches/projs/ot/liberty/: celllib.hpp
benches/src/: impls.rs  lib.rs
dev/: Cargo.toml  build.rs
dev/benches/: benchmark.rs  compare.rs
dev/include/: projs.cpp
dev/include/liberty2json/: Cargo.toml
dev/include/liberty2json/src/: ast.rs  main.rs
dev/include/liberty2json/src/parser/: attribute_parser.rs  cell_parser.rs  liberty_parser.rs
dev/include/ot/liberty/: celllib.cpp
dev/include/si2libertyParser/: Makefile
dev/include/si2libertyParser/include/: si2dr_liberty.h
dev/include/si2libertyParser/src/: PI.c  main.c
dev/src/: _impl_bench.rs  _impl_compare.rs  lib.rs  projs.rs
dev/tech/: ccsn.golden.lib  ccsn.lib
dev/tech/SAED32_EDK/ccs/: saed32hvt_dlvl_ff0p85v25c_i0p85v.golden.lib  saed32hvt_dlvl_ff0p85v25c_i0p85v.lib  saed32hvt_pg_ff0p95v125c.golden.lib  saed32hvt_pg_ff0p95v125c.lib  saed32hvt_pg_ff0p95v125c.lib_golden
dev/tech/SAED32_EDK/nldm/: saed32hvt_dlvl_ff0p85v25c_i0p85v.golden.lib  saed32hvt_dlvl_ff0p85v25c_i0p85v.lib_golden
dev/tech/cases/: boolean_expression.golden.lib  boolean_expression.lib  boolean_expression_special.golden.lib  boolean_expression_special.lib  dynamic_current.golden.lib  dynamic_current.lib  formula.golden.lib  formula.lib_golden  multi_pin.golden.lib  multi_pin.lib  no_semicolon.golden.lib  no_semicolon.lib  ocv.golden.lib  ocv.lib  ocv.lib_golden  ocv_sigma.golden.lib  ocv_sigma.lib  special_boolean_expression.golden.lib  special_boolean_expression.lib  special_boolean_expression.lib_golden  statetable.golden.lib  statetable.lib  timing_type.golden.lib
dev/tech/freepdk45/: gscl45nm.golden.lib  gscl45nm.lib_golden
dev/tech/sky130/: sky130_fd_sc_hs__bufinv_8__tt_1p80V_25C_ccsnoise.cell.golden.lib
dev/tech/test_suite/: README  defgroup.golden.lib  error.include_bad.lib  example.2clibnam.golden.lib  example.2libnam.golden.lib  example.2pin.golden.lib  example.access.golden.lib  example.badcurly.golden.lib  example.baddir.golden.lib  example.badiface.golden.lib  example.badmem.golden.lib  example.badmem2.golden.lib  example.badmod.golden.lib  example.badmod2.golden.lib  example.badtech.golden.lib  example.badtim.golden.lib  example.badval.golden.lib  example.badval2.golden.lib  example.badval3.golden.lib  example.buspindir.golden.lib  example.ccs.golden.lib  example.ccs.lib  example.closesemi.golden.lib  example.coloncell.golden.lib  example.colontempl.golden.lib  example.driver.golden.lib  example.dup1.golden.lib  example.dup2.golden.lib  example.ffbank.golden.lib  example.fpga.golden.lib  example.golden.lib  example.icg.golden.lib  example.icg.lib  example.include_good.golden.lib  example.include_good.lib  example.include_loop.lib  example.lut.golden.lib  example.lut2.golden.lib  example.nolibnam.golden.lib  example.numident.golden.lib  (+19 more)
dev/tech/tsmc22/: sram.golden.lib  sram.lib
dev/tests/: regression.rs
dev/utils/: Cargo.toml
dev/utils/src/: lib.rs
docs/: README.md  header.html  iframe_demo.html
examples/: 0_parse_fmt.rs  1_parse_fmt_file.rs  2_prune_lib.rs  3_lookup_timing.rs  3_obtain_timing_lut.rs
liberty-db/: Cargo.toml  README.md  build.rs
liberty-db/src/: bundle.rs  bus.rs  cell.rs  lib.rs  library.rs  pin.rs  table.rs  timing.rs  types.rs  units.rs  util.rs
liberty-db/src/ast/: timing.rs
liberty-db/src/common/: demo.rs  express.rs  items.rs  mod.rs  traits.rs
liberty-db/src/expression/: mod.rs  test.rs
liberty-db/src/expression/boolean_expression/: boolean.rs  boolean_expression.rs  ff.rs  function.rs  latch.rs  latch_ff.rs  logic.rs  mod.rs  not.rs  port.rs  test.rs  tri_state.rs
liberty-db/src/parser/: mod.rs  test.rs  wrapper.rs
liberty-db/src/pin/: items.rs  mod.rs
liberty-db/src/timing/: builder.rs  impls.rs  items.rs  mod.rs  test.rs  timing_type.rs  types.rs
liberty-db/src/units/: electric_charge.rs  energy.rs  length.rs  mod.rs  power.rs  time.rs
liberty-db/tests/: expression.rs  parser_wrapper.rs  units.rs
liberty-db/tests/tech/SAED32_EDK/ccs/: saed32hvt_dlvl_ff0p85v25c_i0p85v.db  saed32hvt_dlvl_ff0p85v25c_i0p85v.lib
liberty-db/tests/tech/SAED32_EDK/nldm/: saed32hvt_dlvl_ff0p85v25c_i0p85v.db  saed32hvt_dlvl_ff0p85v25c_i0p85v.lib
liberty-db/tests/tech/nangate/: test.lib
liberty-log/: Cargo.toml
liberty-macros/: Cargo.toml
liberty-macros/src/: lib.rs
liberty-parser/: Cargo.toml  README.md
liberty-parser/src/: cell.rs  lib.rs  library.rs  parser.rs  pin.rs  timing.rs  units.rs  wrapper.rs
liberty-parser/src/ast/: ast.rs  express.rs  mod.rs  sdf.rs  timing.rs
macros/: Cargo.toml
macros/src/: attribute.rs  duplicate.rs  enum_token.rs  group.rs  lib.rs  macro_match.rs  name_idx.rs  trie_tree.rs
src/: bundle.rs  bus.rs  ccsn.rs  cell.rs  ctx.rs  lib.rs  (+9 more)
tests/: Cargo.toml  parser_bench.rs  parser_wrapper.rs  regression.rs
tests/other_parser/ot/: config.hpp
tests/src/: demo.rs  lib.rs  parser_bench.rs  regression.rs  tests.rs
tests/tech/: ccsn.lib  ccsn.lib_golden
tests/tech/SAED32_EDK/ccs/: saed32hvt_dlvl_ff0p85v25c_i0p85v.lib_golden  saed32hvt_pg_ff0p95v125c.lib  saed32hvt_pg_ff0p95v125c.lib_golden
tests/tech/SAED32_EDK/nldm/: saed32hvt_dlvl_ff0p85v25c_i0p85v.lib_golden  saed32hvt_ff0p85v25c.db
tests/tech/cases/: formula.lib  formula.lib_golden  no_semicolon.lib  no_semicolon.lib_golden  ocv.lib  ocv.lib_golden  special_boolean_expression.lib_golden  timing_type.lib  timing_type.lib_golden
tests/tech/freepdk45/: gscl45nm.lib  gscl45nm.lib_golden
tests/tech/sky130/: sky130_fd_sc_hs__bufinv_8__tt_1p80V_25C_ccsnoise.cell.lib  sky130_fd_sc_hs__bufinv_8__tt_1p80V_25C_ccsnoise.cell.lib_golden
(+106 files in other folders)
