# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo publish --allow-dirty --registry crates-io -p liberty-db
[workspace]
members = ["macros", "dev", "dev/utils", "dev/include/liberty2json"]

[workspace.package]
version = "0.10.1"
license = "MIT"
edition = "2024"
authors = ["Junzhuo <zhou@junzhuo.site>"]
keywords = ["eda", "liberty", "database", "parser"]
readme = "README.md"
repository = "https://github.com/zao111222333/liberty-db/"
documentation = "https://docs.rs/liberty-db"
categories = ["development-tools"]

[package]
name = "liberty-db"
description = "A fully defined liberty (std. cells in VLSI) data structure, efficient parser & formatter"
include = ["/src", "/examples", "/docs/header.html", "README.md"]
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true


# Enable katex in documentation
# RUSTDOCFLAGS="--html-in-header docs/header.html" cargo doc --no-deps --open
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs/header.html"]

[features]
default = ["fast_hash", "lut_template"]
fast_hash = ["dep:ahash"]
# use str's hash to do match, rather than directly match str
hashmatch = ["liberty-macros/hashmatch"]
py = ["dep:pyo3", "dep:pyo3-stub-gen"]
lut_template = []
__test_runtime_assert = []

[workspace.dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "5.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
itertools = "0.14"
ordered-float = "5.0"
fast-float2 = "0.2"
walkdir = "2"
similar = { version = "2.7", features = ["inline"]}
console = "0.15"
nom = "8.0"
derivative = "2.2"
ryu = "1.0"
itoa = "1.0"
lexical-core = "1.0"
biodivine-lib-bdd = { version = "0.5.23", features = ["serde"] }
mut_set = "0.7.0"
# mut_set = { path = "../mut_set" }
duplicate = "2.0.0"
num-traits = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
sysinfo = "0.33"
chrono = "0.4"
anyhow = "1.0"
# faster hash
ahash = { version = "0.8", features = ["no-rng"]}
# group name matching use faster but less DOS resistance foldhash
# but that's okay since the matching is static and any error will
# be find during compiling with `#[deny(unreachable_patterns)]`
foldhash = "0.1"
dev_utils = { path = "dev/utils" }
hashmatch = "0.1.1"
pyo3 = "0.24.0"
pyo3-stub-gen = "0.7"
# pyo3-stub-gen = { path = "../pyo3-stub-gen/pyo3-stub-gen" }
bincode = "2.0.1"

[dependencies]
liberty-macros = { path = "macros" }
ahash = { workspace = true, optional = true }
foldhash.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
lexical-core.workspace = true
strum.workspace = true
itertools.workspace = true
ordered-float.workspace = true
fast-float2.workspace = true
nom.workspace = true
biodivine-lib-bdd.workspace = true
mut_set.workspace = true
duplicate.workspace = true
hashmatch.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[dev-dependencies]
dev_utils.workspace = true
simple_logger.workspace = true
criterion.workspace = true
bincode.workspace = true
anyhow.workspace = true