# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo publish --allow-dirty --registry crates-io -p liberty-db
[workspace]
members = ["macros", "dev", "dev/utils", "dev/include/liberty2json"]

[workspace.package]
version = "0.17.4"
license = "MIT"
edition = "2024"
authors = ["Junzhuo <zhou@junzhuo.site>"]
keywords = ["eda", "liberty", "database", "parser"]
readme = "README.md"
repository = "https://github.com/zao111222333/liberty-db/"
documentation = "https://docs.rs/liberty-db"
categories = ["development-tools"]

[package]
name = "liberty-db"
description = "A fully defined liberty (std. cells in VLSI) data structure, efficient parser & formatter"
include = ["/src", "/examples", "/docs/header.html", "README.md"]
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true


# Enable katex in documentation
# RUSTDOCFLAGS="--html-in-header docs/header.html" cargo doc --no-deps --open
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs/header.html"]

[features]
default = ["lut_template"]
py = ["dep:pyo3", "dep:pyo3-stub-gen"]
lut_template = []
tracing = ["dep:tracing", "dev_utils/tracing"]

[workspace.dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "5.0"
tracing = "0.1.41"
tracing-subscriber = { version="0.3.0", features=["chrono"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
itertools = "0.14"
ordered-float = "5.0"
fast-float2 = "0.2"
walkdir = "2"
similar = { version = "2.7", features = ["inline"]}
console = "0.16"
nom = "8.0"
lexical-core = "1.0"
biodivine-lib-bdd = { version = "0.6", features = ["serde"] }
# biodivine-lib-bdd = { path = "../../biodivine-lib-bdd", features = ["serde"] }
mut_set = "0.9.0"
# mut_set = { path = "../mut_set" }
duplicate = "2.0.0"
criterion = { version = "0.7", features = ["html_reports"] }
sysinfo = "0.37"
chrono = "0.4"
flate2 = "1"
anyhow = "1.0"
foldhash = "0.2"
dev_utils = { path = "dev/utils" }
pyo3 = "0.27"
pyo3-stub-gen = { version = "0.17", default-features = false }
# pyo3-stub-gen = { path = "../../pyo3-stub-gen-main/pyo3-stub-gen", default-features = false }
bincode = { version= "2", features = ["serde"] }
indexmap = { version = "2.9", features = ["serde"] }
bitflags = { version = "2.9", features = ["serde"] }
pprof = { version = "0.15", features = ["flamegraph", "protobuf", "protobuf-codec"] }

[dependencies]
liberty-macros = { path = "macros" }
# liberty-macros = "0.16.4"
foldhash.workspace = true
log.workspace = true
tracing = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
lexical-core.workspace = true
strum.workspace = true
itertools.workspace = true
ordered-float.workspace = true
fast-float2.workspace = true
nom.workspace = true
biodivine-lib-bdd.workspace = true
duplicate.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
indexmap.workspace = true
mut_set.workspace = true
bitflags.workspace = true
flate2.workspace = true

[dev-dependencies]
dev_utils.workspace = true
tracing-subscriber.workspace = true
simple_logger.workspace = true
criterion.workspace = true
bincode.workspace = true
anyhow.workspace = true
pprof.workspace = true