# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "liberty-db"
version = "0.1.3"
edition = "2021"
license = "MIT"
keywords = [
    "eda", 
    "liberty",
    "database",
    "parser",
]
description = "`liberty` data structre"
authors = ["Junzhuo <zhou@junzhuo.me>"]
readme = "README.md"
repository = "https://github.com/zao111222333/liberty-rs/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
hashbrown = "0.12"
compact_str = "0.6.1"
lazy_static = "1.4.0"
# readonly = "0.2.2"
strum = "0.24"
strum_macros = "0.24"
# test-log = "0.2.11"

[dev-dependencies]
test-log = { version = "0.2.11", features = ["trace"], default-features = false }


env_logger = "*"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}