# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "liberty-db"
version = "0.1.7"
edition = "2021"
license = "MIT"
keywords = [
    "eda", 
    "liberty",
    "database",
    "parser",
]
description = "`liberty` data structre"
authors = ["Junzhuo <zhou@junzhuo.me>"]
readme = "README.md"
repository = "https://github.com/zao111222333/liberty-rs/"
documentation = "https://docs.rs/liberty-db"
include = ["/src", "/tests", "/docs", "/build.rs", "README.md"]

# Enable katex in documentation
# RUSTDOCFLAGS="--html-in-header docs/header.html" cargo doc --no-deps --open
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs/header.html" ]

[features]
default = ["f32"]
f32 = []
f64 = []


[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
hashbrown = "0.12"
lazy_static = "1.4.0"
strum = "0.24"
strum_macros = "0.24"
cfg-if = "1.0"
float-cmp = "0.9.0"
derivative = "2.2.0"
prettytable-rs = "^0.10"
itertools = "0.10.5"
liberty-macros = {path = "macros"}

[dependencies.uom]
version = "0.34.0"
default-features = false
features = [
    # "autoconvert", # automatic base unit conversion.
    # "usize", # "u8", "u16", "u32", "u64", "u128", # Unsigned integer storage types.
    # "isize", # "i8", "i16", "i32", "i64", "i128", # Signed integer storage types.
    # "bigint", "biguint", # Arbitrary width integer storage types.
    # "rational", "rational32", "rational64", "bigrational", # Integer ratio storage types.
    # "complex32", "complex64", # Complex floating point storage types.
    "f32", "f64", # Floating point storage types.
    "si", "std", # Built-in SI system and std library support.
    # "use_serde", # Serde support.
]


[dev-dependencies]
env_logger = "0.10"
test-log = { version = "0.2.11", features = ["trace"], default-features = false }
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}

[build-dependencies]
# dircpy = "0.3.14"