[package]
name = "liberty-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "`liberty` macros"
authors = ["Junzhuo <zhou@junzhuo.me>"]
readme = "README.md"
repository = "https://github.com/zao111222333/liberty-rs/"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
