# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "liberty-parser"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = [
    "eda", 
    "liberty",
    "parser"
]
description = "`liberty` parser"
authors = ["Junzhuo <zhou@junzhuo.me>"]
readme = "README.md"
repository = "https://github.com/zao111222333/liberty-rs/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nom = "7.1"
hashbrown = "0.12"
phf = "0.11.1"

[dev-dependencies]