[package]
name = "liberty-macros"
description = "`liberty` macros"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version ="1.0",features = ["extra-traits"]}
quote = "1.0"