# cargo publish --registry crates-io -p liberty-macros
[package]
name = "liberty-macros"
description = "`liberty` macros"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
default = []
hash_match = []
vec2map = []

[dependencies]
foldhash.workspace = true
cfg-if.workspace = true
proc-macro2 = "1.0"
syn = {version ="2.0.15",features = ["extra-traits"]}
quote = "1.0"