[package]
name = "liberty-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
liberty-db = { path = ".." }
env_logger = "0.10"
test-log = { version = "0.2.11", features = ["trace"], default-features = false }
walkdir = "2"
prettytable-rs = "^0.10"
colored = "2.0.0"
criterion = "0.3"
liberty-io = "0.0.2"
libertyparse = "0.3"
anyhow = "1.0.80"