[package]
name = "dev_utils"
publish = false
edition.workspace = true

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
itertools.workspace = true
walkdir.workspace = true
console.workspace = true
similar.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
strum.workspace = true
criterion.workspace = true
sysinfo.workspace = true
chrono.workspace = true
log.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }